# bears-rover-navigation

./: README.md
app_microstrain/: Dockerfile.template  README.md  docker-compose.yaml  package.xml  postcreatecommand.sh  setup.py
app_microstrain/analysis/: cv7_calibration.py
app_microstrain/config/: cv7_ahrs.yml  params.yaml
app_microstrain/docs/: COMPLETE_SETUP_GUIDE.md
app_microstrain/launch/: app_microstrain.launch.py
app_microstrain/resource/: app_microstrain
app_microstrain/scripts/: cv7_ros2_logger.py  cv7_visualizer.py
